# slack_notipy

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py  slack_notipy.py
.devcontainer/: devcontainer.json
slack_notipy/: __init__.py  config.json  slack_notipy.py
