[metadata]
name = slack_notipy
version = attr: slack_notipy.__version__.__version__
description = A simple script for sending decorated notifications using Slack Incoming Webhook from Python3.
long_description = A simple script for sending decorated notifications using Slack Incoming Webhook from Python3.
url = https://github.com/kiyou/slack_notipy
author = kiyou
license = MIT
classifiers = 
    # https://pypi.python.org/pypi?:action = list_classifiers
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
keywords = tools

[options]
zip_sage = False
include_package_data = True
packages = find:

[options.package_data]
slack_notipy = config.json

[options.entry_points]
console_scripts =
    slack_notipy = slack_notipy:cli

[options.extras_require]
dotenv = python-dotenv
